src/style/sections/libraries/libraries-section.less
/*
 * Copyright (c) 2014 Adobe Systems Incorporated. All rights reserved.
 *  
 * Permission is hereby granted, free of charge, to any person obtaining a
 * copy of this software and associated documentation files (the "Software"), 
 * to deal in the Software without restriction, including without limitation 
 * the rights to use, copy, modify, merge, publish, distribute, sublicense, 
 * and/or sell copies of the Software, and to permit persons to whom the 
 * Software is furnished to do so, subject to the following conditions:
 *  
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *  
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, 
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER 
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING 
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER 
 * DEALINGS IN THE SOFTWARE.
 *
 */
 
@graphic-drag-preview-size: 6.4rem;
@libraries-button-size: 1.3rem;
@libraries-preview-height: 3.6rem;
@libraries-preview-width: 5.4rem;

.libraries {
    position: relative;
    flex-grow: 1;
    flex-shrink: 0;
    
    .section-title {
        border-bottom: @hairline solid @layer-divider;
    }
    
    .section-container {
        padding: 0;
        overflow-y: hidden;
    }
    
    .split-button__item {
        svg {
            width: @libraries-button-size;
            height: @libraries-button-size;
        }
    }
    
    .section-container {
        flex-basis: 17.5rem;
        
        &__collapsed {
            display: none;
        }
    }
    
    .assets__graphic__dragging {
        opacity: .7;
    }
    
    .libraries-bar{
        ul {
            flex-grow: 0;        
            .split-button__item__color-icon {
                width: @libraries-button-size;
                height: @libraries-button-size;
                border: @hairline solid white;    
                border-radius: .1rem;
            }
        }
    }
    
    &__container {
        display: flex;
        justify-content: space-between;
        flex-direction: column;
    }
    
    &__bar__top {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        flex: none;
        height: 3rem;
        margin: 0 2rem;
        align-items: center;
        border-bottom: @hairline solid @layer-divider;
        
        .drop-down {
            flex-shrink: 1;
            border: 0;
            
            input {
                width: 100%;
            }
        }
        
        .libraries__split-button-list{
            flex: none;
            width: 9rem;
            justify-content: space-between;
            
            .split-button__item {
                justify-content: flex-end;
                margin: 0;
            }
        }
    }
    
    &__bar__bottom {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        flex: none;
        height: 3rem;
        margin: 0 2rem;
        border-top: @hairline solid @layer-divider;
        
        .libraries-bar__section__left {
            flex: none;
            
            .split-button__item {
                margin-right: 1.5rem;
            }
        }
        
        .libraries-bar__section__right {
            flex: none;
            width: 6rem;
            justify-content: space-between;
            
            .split-button__item {
                justify-content: flex-end;
                margin: 0;
            }
        }
    }
    
    &__content {
        flex-shrink: 1;
        flex-grow: 1;
        overflow-y: auto;
        overflow-x: hidden;
    }
    
    &__info {
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding: 0 1rem;
        text-align: center;
        line-height: 1.8rem;
        margin: 0 2rem;
        
        div {
            margin-bottom: 1rem;
        }
        
        &__body {
            color: @warm-gray;
        }
        
        &__link a {
            color: @warm-white;

        }
    }


    &__drop-overlay {
        position: absolute;
        top: 0;
        bottom: 0;
        right: 0;
        left: 0;
        background-color: rgba(0, 0, 0, .2);
        z-index: 1;
        cursor: copy;
    }
    
    &__drop-overlay__disallow {
        cursor: not-allowed;
    }
    
    &__assets {
        &:last-child {
            padding-bottom: 2rem;
        }
        
        &__title {
            padding: 1rem 2rem .5rem 2rem;
            color: @warm-gray;
        }
    }
    
    &__asset {
        display: flex;
        flex-direction: row;
        align-items: center;
        padding: .3rem 2rem;
        
        &-selected, &:hover {
            background-color: @libraries-asset-preview-gray-light;
        }
        
        &__preview {
            width: @libraries-preview-width;
            height: @libraries-preview-height;
            margin-right: 1rem;
        }
        
        &__desc {
            display: flex;
            flex-direction: column;
        }
        
        &__desc-details {
            margin-top: .3rem;
            font-size: 1rem;
            color: @warm-gray;
        }
        
        &__preview-character-style, &__preview-layer-style, &__preview-graphic {
            display: flex;
            justify-content: center;
            align-items: center;
            
            img {
                max-height: @libraries-preview-height - .4rem;
            }
        }
        
        &__preview-character-style{
            background-color: @warm-white;
            position: relative;
            
            &__color-swatch {
                position: absolute;
                top: .3rem;
                right: .3rem;
                height: .6rem;
                width: 1rem;
            }
        }
        
        &__preview-layer-style {
            background-color: @libraries-asset-preview-gray;
        }
        
        &__preview-graphic {
            background-color: @warm-white;
            .background-checkerboard();
        }
        
        &__preview-colortheme {
            display: flex;
            flex-direction: row;
            transition: width 100ms ease-out;
            
            > div {
                height: 100%;
                width: 20%;
            }
            
            &:hover {
                width: @libraries-preview-width * 2;
            }
        }
        
        &__buttons {
            flex: none;
            width: 9rem;
            
            .split-button__item {
                justify-content: flex-start;
            }
        }
    }
    
    &__asset-brush {
        color: @warm-gray;
        font-style: italic;
        padding: .3rem 2rem;
        line-height: 1.3rem;
    }
}

.assets__graphic__drag-preview {
    position: fixed;
    width: @graphic-drag-preview-size;
    height: @graphic-drag-preview-size;
    line-height: @graphic-drag-preview-size;
    text-align: center;
    margin-top: -@graphic-drag-preview-size/2;
    margin-left: -@graphic-drag-preview-size/2;
    pointer-events: none;
    
    img {
        max-width: @graphic-drag-preview-size;
        max-height: @graphic-drag-preview-size;
        vertical-align: middle;
    }
}

